# Checkered

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
Assets/: CMakeLists.txt  level.dae  test.scene
Assets/Meshes/: arrow.mtl  car.blend  car.blend1  car.blend2  car.blend3  car.blend4  car.blend5  car.blend6  car.blend7  car.blend8  car.blend9  car.fbx  car.ply  car_body.mtl  car_liscense.mtl  checkeredBowl.fbx  checkeredMap.fbx  checkeredMap.mtl  checkeredMap2.fbx  city-block-1.mtl  city-block-2.mtl  city-block-3.mtl  city-block-4.mtl  city-collision.mtl  city-combined.mtl  city.blend  city.blend1  city.dae  city.fbx  city.mtl  city2.mtl  city_ne.mtl  city_nw.mtl  city_se.mtl  city_sw.mtl  human.fbx  human.mtl  locations.dae  obstacles.dae  skybox.mtl  (+4 more)
Assets/Objects/: billboardtest.json  box.json  damage.json
Assets/Programs/: basic.json  basic.shader  billboard.json  checker.json  depth.json  font.json  map.json  sky.json
Assets/Shaders/: basic.frag  font.vert  (+10 more)
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Events.h  SystemCalls.cpp  SystemCalls.h  main.cpp  main.h  tweaks.txt
Engine/Components/: Billboard.cpp  Billboard.h  Camera.cpp  Camera.h  Component.h  ComponentBase.cpp  ComponentBase.h  ComponentEvent.cpp  ComponentEvent.h  ComponentId.cpp  ComponentId.h  ComponentId.tpp.h  ComponentInterface.cpp  ComponentInterface.h  Dirty.cpp  Dirty.h  EventDelegate.cpp  EventDelegate.h  EventHandler.cpp  EventHandler.h  GameObject.h  Index.cpp  Index.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.hpp  Passenger.cpp  Passenger.h  PhysicsActor.cpp  PhysicsActor.h  Plane.h  PlayerVehicle.cpp  PlayerVehicle.hpp  ReportCard.cpp  ReportCard.h  SceneComponent.cpp  SceneComponent.h  (+25 more)
Engine/Engine/: CMakeLists.txt  CMakeSettings.json
Engine/Engine/Assets/: CMakeLists.txt
Engine/Engine/Assets/Objects/: player.object  test.scenery
Engine/Engine/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Events.cpp  SystemCalls.cpp  SystemCalls.h  main.cpp  main.h
Engine/Engine/Engine/Assets/Objects/: test.scenery
Engine/Engine/Engine/Assets/Shaders/: basic.frag  basic.vert
Engine/Engine/Engine/CMake/: FindGLFW3.cmake
Engine/Engine/Engine/Components/: Billboard.cpp  Billboard.h  Camera.cpp  Camera.h  Component.h  ComponentBase.cpp  ComponentBase.h  ComponentEvent.h  ComponentId.cpp  ComponentId.h  Dirty.cpp  Dirty.h  GameObject.cpp  GameObject.h  Index.cpp  Index.h  Mesh.cpp  Mesh.h  Model.h  Plane.cpp  Plane.h  Shader.cpp  Shader.h  Vehicle.cpp  Vehicle.h
Engine/Engine/Engine/Systems/: PhysicsSystem.h  RenderingSystem.cpp  RenderingSystem.h
Engine/Engine/Engine/Systems/Camera/: CameraSystem.cpp  CameraSystem.h
Engine/Engine/Engine/Systems/Debug/: LiveReloadSystem.cpp  LiveReloadSystem.h
Engine/Engine/Engine/Systems/Input/: InputSystem.cpp  InputSystem.h
Engine/Engine/Engine/Systems/Pipeline/: EntityLoader.cpp  EntityLoader.h  MeshLoader.h  ShaderLoader.h
Engine/Engine/Engine/Systems/Rendering/: BillboardSystem.cpp  Rendering.h  RenderingBatch.cpp  RenderingBatch.h  RenderingSystem.cpp  RenderingSystem.h
Engine/Engine/Include/assimp/include/assimp/: defs.h
Engine/Engine/Include/glad/include/KHR/: khrplatform.h
Engine/Engine/Include/glfw-3.3.1/: CMakeLists.txt
Engine/Engine/Include/glfw-3.3.1/CMake/: x86_64-w64-mingw32-clang.cmake  x86_64-w64-mingw32.cmake
Engine/Engine/Include/glfw-3.3.1/examples/: particles.c
Engine/Engine/Include/glminclude/glm/gtc/: type_precision.hpp
Engine/Engine/Include/include/nlohmann/: json.hpp
Engine/Engine/Middleware/glad/include/glad/: glad.h
Engine/Engine/Middleware/glad/src/: glad.c
Engine/Engine/libs/x64/: IrrXMLd.lib  assimp-vc141-mtd.lib  assimp-vc142-mtd.lib  zlibstaticd.lib
Engine/Scenarios/: HealthBar.cpp  HealthBar.hpp  Types.cpp  Types.hpp  Waypoint.cpp  Waypoint.hpp  scenariointerface.cpp  scenariointerface.hpp  start.cpp  start.hpp  testworld.cpp  testworld.hpp  timer.cpp  timer.hpp
Engine/Systems/: Engine.cpp  Engine.h  EngineDebug.cpp  EngineDebug.hpp  EngineStore.cpp  EngineStore.h  Index.cpp  Index.h  SystemInterface.hpp  systeminterface.hpp
Engine/Systems/Camera/: CameraSystem.cpp  CameraSystem.h
Engine/Systems/Component/: scenecomponentsystem.cpp  scenecomponentsystem.hpp  scenerysystem.cpp  scenerysystem.h
Engine/Systems/Damage/: damagesystem.cpp  damagesystem.hpp
Engine/Systems/Debug/: LiveReloadSystem.h
Engine/Systems/Events/: Events.cpp  Events.h
Engine/Systems/Input/: InputSystem.cpp  InputSystem.h
Engine/Systems/Navigation/: astar.cpp  astar.h  navigationGrid.h  pathNode.h
Engine/Systems/Physics/: FilterShader.cpp  FilterShader.h  PhysicsSystem.cpp  PhysicsSystem.h  SimulationCallback.cpp  SimulationCallback.h  VehicleFactory.cpp  VehicleFactory.hpp  VehicleFactoryFunctions.cpp  VehicleFactoryFunctions.hpp  Wheel.cpp  Wheel.hpp
Engine/Systems/Physics/snippetcommon/: ClassicMain.cpp  SnippetPVD.h
Engine/Systems/Physics/snippetutils/: SnippetUtils.cpp  SnippetUtils.h
Engine/Systems/Physics/snippetvehicle4w/: SnippetVehicle4W.cpp  SnippetVehicle4WRender.cpp
Engine/Systems/Physics/snippetvehiclecommon/: SnippetVehicle4WCreate.cpp  SnippetVehicleConcurrency.h  SnippetVehicleCreate.cpp  SnippetVehicleCreate.h  SnippetVehicleFilterShader.cpp  SnippetVehicleFilterShader.h  SnippetVehicleNoDriveCreate.cpp  SnippetVehicleSceneQuery.cpp  SnippetVehicleSceneQuery.h  SnippetVehicleTankCreate.cpp  SnippetVehicleTireFriction.cpp  SnippetVehicleTireFriction.h  SnippetVehicleWheelQueryResult.h
Engine/Systems/Pipeline/: EntityLoader.cpp  EntityLoader.h  Library.cpp  Library.h  MeshLoader.cpp  MeshLoader.h  ShaderLoader.cpp  ShaderLoader.h  pipeline.cpp  pipeline.hpp
Engine/Systems/Rendering/: BillboardSystem.cpp  BillboardSystem.h  Rendering.h  RenderingBatch.cpp  RenderingBatch.h  RenderingSystem.cpp  RenderingSystem.h  fontsystem.cpp  fontsystem.hpp  text.cpp  text.hpp
Engine/Systems/Vehicle/: vehiclesystem.cpp  vehiclesystem.hpp
Engine/Systems/hornSystem/: hornSystem..h  hornSystem.cpp  hornSystem.h
Engine/Systems/soundSystem/: SoundSystem.cpp  SoundSystem.h
(+129 files in other folders)
